# autobot

./: .env.example  .gitignore  README.md  cli  pyproject.toml
docker/pi-sandbox/: Dockerfile
evals/harness/python-add/: fixture.json
evals/harness/python-add/repo/tests/: test_calculator.py
evals/harness/welcome-copy/: fixture.json
evals/harness/welcome-copy/repo/notifications/: formatters.py  messages.py
evals/harness/welcome-copy/repo/tests/: test_welcome.py
src/autobot/: __main__.py  adapters.py  audit.py  chat.py  cli.py  config.py  context.py  cost.py  diffing.py  doctor.py  doctor_harness.py  doctor_result.py  eval_harness.py  eval_live.py  git_safety.py  github.py  github_auth.py  guardrails.py  harness.py  http_transport.py  implementation.py  labels.py  learning.py  linear.py  llm.py  llm_clients.py  llm_http.py  models.py  pi_harness.py  pi_prompts.py  pipeline.py  pr.py  pr_flow.py  result.py  resume.py  review.py  sandbox.py  scanner.py  schemas.py  state.py  (+6 more)
tests/: test_audit.py  test_chat.py  test_cli.py  test_context.py  test_diffing.py  test_doctor.py  test_eval_harness.py  test_github.py  test_github_auth.py  test_harness.py  test_learning.py  test_linear.py  test_llm.py  test_pipeline.py  test_pr.py  test_resume.py  test_review.py  test_sandbox.py  test_schemas.py  test_state.py  test_stubs.py  test_support.py  test_workflow.py
