[project]
name = "autonomous-teammate"
version = "0.1.0"
description = "A poll-based autonomous feature implementation teammate prototype."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
cli = "autobot.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = [
  "src/autobot/github_auth.py",
  "src/autobot/http_transport.py",
  "src/autobot/workflow.py",
  "src/autobot/workflow_models.py",
  "src/autobot/workflow_pauses.py",
]

[[tool.mypy.overrides]]
module = [
  "autobot.adapters",
  "autobot.config",
  "autobot.cost",
  "autobot.guardrails",
  "autobot.implementation",
  "autobot.models",
  "autobot.pr",
  "autobot.resume",
  "autobot.review",
  "autobot.sandbox",
  "autobot.tests",
]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
